# project2

./: AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonAutomaton.h  ColonDashAutomaton.h  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  DatalogProgram.cpp  DatalogProgram.h  FactAutomaton.cpp  FactAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.cpp  Predicate.h  Q_MarkAutomaton.h  QueryAutomaton.cpp  QueryAutomaton.h  Right_ParenAutomaton.h  Rule.cpp  Rule.h  RuleAutomaton.cpp  RuleAutomaton.h  SchemeAutomaton.cpp  SchemeAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  main.cpp
